// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeatMap chart rendering Should re-render the HeatMap chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_HeatMap_empty0"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`HeatMap chart rendering Should re-render the HeatMap chart with data 2`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_1"
    role="presentation"
  >
    <div
      id="defaultTabbableElement_2"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone3"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <svg
        focusable="false"
        height="292"
        style="display: block;"
        width="650"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_1"
          text-anchor="middle"
          transform="translate(0, 257)"
        >
          <path
            class="domain"
            d="M40.5,0V0.5H630.5V0"
            stroke="#000"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(188.96039603960392,0)"
          >
            <line
              stroke="#000"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="#000"
              y="10"
            >
              Mar/01
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(481.039603960396,0)"
          >
            <line
              stroke="#000"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="#000"
              y="10"
            >
              Mar/02
            </text>
          </g>
        </g>
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_1"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M0,257.5H0.5V20.5H0"
            stroke="#000"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,197.16336633663366)"
          >
            <line
              stroke="#000"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="#000"
              x="-10"
            >
              p1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,79.83663366336633)"
          >
            <line
              stroke="#000"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="#000"
              x="-10"
            >
              p2
            </text>
          </g>
        </g>
        <g
          aria-label="Mar/01, p2. Nasty, 50/2391. a good day to start with in Texas with best air quality."
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(45.8415841584158, 22.34653465346534)"
        >
          <rect
            fill="rgb(159, 198, 222)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          >
            50
          </text>
        </g>
        <g
          aria-label="Mar/02, p2. Execllent (0-200), 25/2479. Due to unexpected heavy rain, all the pollutants are washed
        off and people of alaska are hoping for more of this days."
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(337.9207920792079, 22.34653465346534)"
        >
          <rect
            fill="rgb(166, 207, 226)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          >
            25
          </text>
        </g>
        <g
          aria-label="Mar/01, p1. Execllent (0-200), 50/2391. a good day to start with in Texas with best air quality."
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(45.8415841584158, 139.67326732673268)"
        >
          <rect
            fill="rgb(159, 198, 222)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          >
            50
          </text>
        </g>
        <g
          aria-label="Mar/02, p1. Nasty, 25/2479. Due to unexpected heavy rain, all the pollutants are washed
      off and people of alaska are hoping for more of this days."
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(337.9207920792079, 139.67326732673268)"
        >
          <rect
            fill="rgb(166, 207, 226)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          >
            25
          </text>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style=""
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone4"
                data-tabster="{\\"uncontrolled\\": {}}"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Execllent (0-200)"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="2"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: rgb(144, 180, 215);
                              border-color: rgb(144, 180, 215);
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Execllent (0-200)
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Nasty"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="2"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: rgb(115, 144, 200);
                              border-color: rgb(115, 144, 200);
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, rgb(115, 144, 200), rgb(115, 144, 200));
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Nasty
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeatMapChart snapshot tests should render HeatMapChart correctly with numeric datapoints 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_1"
  >
    <div
      id="defaultTabbableElement_2"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone3"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <svg
        aria-label="Heat map chart with 4 data points. The X axis displays categories. The Y axis displays categories. "
        focusable="false"
        height="292"
        role="region"
        style="display: block;"
        width="650"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_1"
          text-anchor="middle"
          transform="translate(0, 257)"
        >
          <path
            class="domain"
            d="M40.5,0.5H630.5"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(188.96039603960392,0)"
          >
            <line
              stroke="currentColor"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(481.039603960396,0)"
          >
            <line
              stroke="currentColor"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              40
            </text>
          </g>
        </g>
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_1"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M0.5,257.5V20.5"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,197.16336633663366)"
          >
            <line
              stroke="currentColor"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              10
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,79.83663366336633)"
          >
            <line
              stroke="currentColor"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              20
            </text>
          </g>
        </g>
        <g
          aria-label="Lorem ipsum dolor sit amet"
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(45.8415841584158, 22.34653465346534)"
        >
          <rect
            fill="rgb(151, 189, 219)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          />
        </g>
        <g
          aria-label="ut labore et dolore magna aliqua"
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(337.9207920792079, 22.34653465346534)"
        >
          <rect
            fill="rgb(166, 207, 226)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          />
        </g>
        <g
          aria-label="sed do eiusmod tempor incididunt"
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(45.8415841584158, 139.67326732673268)"
        >
          <rect
            fill="rgb(159, 198, 222)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          />
        </g>
        <g
          aria-label="consectetur adipiscing elit"
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(337.9207920792079, 139.67326732673268)"
        >
          <rect
            fill="rgb(144, 180, 215)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          />
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style=""
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone4"
                data-tabster="{\\"uncontrolled\\": {}}"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Excellent"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="2"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: rgb(144, 180, 215);
                              border-color: rgb(144, 180, 215);
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Excellent
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Nasty"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="2"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: rgb(115, 144, 200);
                              border-color: rgb(115, 144, 200);
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, rgb(115, 144, 200), rgb(115, 144, 200));
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Nasty
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeatMapChart snapshot tests should render axis labels correctly When custom formatter functions are set for x and y axis strings 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_1"
  >
    <div
      id="defaultTabbableElement_2"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone3"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <svg
        aria-label="Heat map chart with 4 data points. The X axis displays categories. The Y axis displays categories. "
        focusable="false"
        height="292"
        role="region"
        style="display: block;"
        width="650"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_1"
          text-anchor="middle"
          transform="translate(0, 257)"
        >
          <path
            class="domain"
            d="M40.5,0.5H630.5"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(188.96039603960392,0)"
          >
            <line
              stroke="currentColor"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              xPoint p3
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(481.039603960396,0)"
          >
            <line
              stroke="currentColor"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              xPoint p4
            </text>
          </g>
        </g>
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_1"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M0.5,257.5V20.5"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,197.16336633663366)"
          >
            <line
              stroke="currentColor"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              yPoint p1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,79.83663366336633)"
          >
            <line
              stroke="currentColor"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              yPoint p2
            </text>
          </g>
        </g>
        <g
          aria-label="xPoint p3, yPoint p2. Nasty, 25."
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(45.8415841584158, 22.34653465346534)"
        >
          <rect
            fill="rgb(166, 207, 226)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          >
            25
          </text>
        </g>
        <g
          aria-label="xPoint p4, yPoint p2. Excellent, 100."
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(337.9207920792079, 22.34653465346534)"
        >
          <rect
            fill="rgb(144, 180, 215)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          >
            100
          </text>
        </g>
        <g
          aria-label="xPoint p3, yPoint p1. Excellent, 75."
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(45.8415841584158, 139.67326732673268)"
        >
          <rect
            fill="rgb(151, 189, 219)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          >
            75
          </text>
        </g>
        <g
          aria-label="xPoint p4, yPoint p1. Nasty, 50."
          data-is-focusable="true"
          fill-opacity="1"
          role="img"
          tabindex="-1"
          transform="translate(337.9207920792079, 139.67326732673268)"
        >
          <rect
            fill="rgb(159, 198, 222)"
            height="114.98019801980197"
            width="286.23762376237624"
          />
          <text
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #ffffff;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 600;
                  pointer-events: none;
                }
            dominant-baseline="middle"
            text-anchor="middle"
            transform="translate(143.11881188118812, 57.49009900990099)"
          >
            50
          </text>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style=""
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone4"
                data-tabster="{\\"uncontrolled\\": {}}"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Excellent"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="2"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: rgb(144, 180, 215);
                              border-color: rgb(144, 180, 215);
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Excellent
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Nasty"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="2"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: rgb(115, 144, 200);
                              border-color: rgb(115, 144, 200);
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, rgb(115, 144, 200), rgb(115, 144, 200));
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Nasty
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
